<resources>
    <string name="app_name">practice_login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="facebook">FaceBook</string>
    <string name="google">Google</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="register">Register!</string>
    <string name="password">Password</string>
    <string name="keep_login">Keep login!</string>
</resources>