<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registeractivity"
    android:background="@color/mainbackgroundcolor">

    <TextView
        android:id="@+id/register"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:shadowColor="@color/buttongreen"
        android:text="Register"
        android:textAlignment="center"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <EditText
        android:id="@+id/inputusername"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="56dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="Email"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="12.5dp"
        android:paddingRight="20dp"
        android:paddingBottom="12.5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintfontcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.369" />

    <EditText
        android:id="@+id/inputpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:background="@drawable/input_bg"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/ic_security"
        android:drawablePadding="10dp"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        android:paddingLeft="20dp"
        android:paddingTop="12.5dp"
        android:paddingRight="20dp"
        android:paddingBottom="12.5dp"
        android:textColor="@color/black"
        android:textColorHint="@color/hintfontcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/registerbutton"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_bg"
        android:backgroundTint="@color/buttongreen"
        android:text="@string/register"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.65" />

    <TextView
        android:id="@+id/gotologin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_account"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/Test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="TextView"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.809" />
</androidx.constraintlayout.widget.ConstraintLayout>